--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Meghana Bobbili</h1>
+
+    <h3>Salarjung Museum</h3>
+    <p>It is located on the bank of musi river in the city of Hyderabad,Telangana,India.It has a private collection of <b>the Salar Jung family</b>.It has a collection of sculptures,paintings,cravings,textiles,manuscripts,ceramics, clocks, and furniture from Japan,China,Burma,Nepal,India,Persia,Egypt,Europe, and North America.<br>It is one of the <b>largest museums in the world</b>.</p>
 </body>
 </html>
