--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <h1>Meghana Bobbili</h1>
 
     <h3>Salarjung Museum</h3>
-    <p>It is located on the bank of musi river in the city of Hyderabad,Telangana,India.It has a private collection of <b>the Salar Jung family</b>.It has a collection of sculptures,paintings,cravings,textiles,manuscripts,ceramics, clocks, and furniture from Japan,China,Burma,Nepal,India,Persia,Egypt,Europe, and North America.<br>It is one of the <b>largest museums in the world</b>.</p>
+    <p>It is located on the bank of musi river in the city of Hyderabad,Telangana,India.It has a private collection of <b>the Salar Jung family</b>.
+        It has a collection of sculptures,paintings,cravings,textiles,manuscripts,ceramics, clocks, and furniture from Japan,China,Burma,Nepal,India,Persia,Egypt,Europe, and North America.
+        <br>It is one of the <b>largest museums in the world</b>.</p>
+
+    <hr>
+
+    <h3>Rajiv Gandhi International Airport</h3>
+    <p>The directions from Rajiv Gandhi international airport to salarjung museum by car are : </p>
+    <ol>
+        <li>Follow Airport Approach Road, NH765 and Kandikal Gate Rd to Gowlipura Rd in Chatrinaka.</li>
+        <ol style="list-style-type:lower-roman">
+            <li>Head west on Airport Approach Road.</li>
+            <li>straight to stay on NH765.</li>
+            <li>Slight left onto Barkas Srisailam Highway.</li>
+            <li>Continue straight to stay on Barkas Srisailam Highway.</li>
+            <li>Turn right at Chandrayangutta Road onto Chandrayangutta Rd.</li>
+        </ol>
+        <li>Follow Gowlipura Rd to Sultan Shahi Rd in Sultan Shahi.</li>
+        <li>Follow Sultan Shahi Rd and Mir Alam Mandi Rd to Darulshifa.</li>
+        <li>Turn left and you will find Salarjung museum.</li>
+    </ol>
+
 </body>
 </html>
