created a new file aboutme.html and modified index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr>
 
     <h3>Rajiv Gandhi International Airport</h3>
-    <p>The directions from Rajiv Gandhi international airport to salarjung museum by car are : </p>
+    <h5>The directions from Rajiv Gandhi international airport to salarjung museum by car are : </h5>
     <ol>
         <li>Follow Airport Approach Road, NH765 and Kandikal Gate Rd to Gowlipura Rd in Chatrinaka.</li>
         <ol style="list-style-type:lower-roman">
@@ -31,6 +31,17 @@
         <li>Follow Sultan Shahi Rd and Mir Alam Mandi Rd to Darulshifa.</li>
         <li>Turn left and you will find Salarjung museum.</li>
     </ol>
+    
+    <h5>List of other locations around the SalarJung Museum :</h5>
+    <ul style="list-style-type:disc">
+        <li>Hussain Sagar</li>
+        <li>Golconda Fort</li>
+        <li>Jalavihar</li>
+        <li>Birla Mandir</li>
+        <li>NTR Gardens</li>
+    </ul>
+
+    <a href="aboutme.html">Know Intresting Facts About Me</a>
 
 </body>
 </html>
