added table to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebApps Assignment 3:Working on HTML</title>
+    <style>
+        td, th {
+            border: 1px solid black;
+            text-align: center;
+            padding: 8px;
+        }
+
+        .center {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>Meghana Bobbili</h1>
@@ -33,7 +45,8 @@
     </ol>
     
     <h5>List of other locations around the SalarJung Museum :</h5>
-    <ul style="list-style-type:disc">
+    <ul style="font-family: arial, sans-serif;
+    border-collapse: collapse;">
         <li>Hussain Sagar</li>
         <li>Golconda Fort</li>
         <li>Jalavihar</li>
@@ -42,6 +55,39 @@
     </ul>
 
     <a href="aboutme.html">Know Intresting Facts About Me</a>
+
+    <hr>
+    
+    <h4>List of Cities to visit in India</h4>
+    <p>I'm adding some cities that people should visit when in India.I have memtioned the details in the follwing table.The first column include name of the city. The second column has details about important location in the
+        city to visit. The third column is the amount of time to spend visiting the location</p>
+    <table  class="center" style="font-family: arial, sans-serif; border-collapse: collapse; width: 50%;">
+        <tr>
+          <th>CITY</th>
+          <th>PLACE TO VISIT</th>
+          <th>DURATION</th>
+        </tr>
+        <tr>
+          <td>Hyderabad</td>
+          <td>Taj Falaknama Palace</td>
+          <td>2 hours</td>
+        </tr>
+        <tr>
+          <td>Delhi</td>
+          <td>Red Fort</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+            <td>Mumbai</td>
+            <td>Taj Palace</td>
+            <td>2 hours</td>
+          </tr>
+          <tr>
+            <td>Chennai</td>
+            <td> Marina Beach</td>
+            <td>4 hours</td>
+          </tr>
+      </table>
 
 </body>
 </html>
