added code block

--- a/index.html
+++ b/index.html
@@ -89,5 +89,22 @@
           </tr>
       </table>
 
+    <hr>
+    <h4>Code Display</h4>
+    <blockquote cite="https://stackoverflow.com/questions/31063966/how-should-you-comment-css">How should you comment CSS</blockquote>
+    <a href="https://stackoverflow.com/questions/31063966/how-should-you-comment-css">Link to how you should comment in css</a>
+    <pre style="background-color: lightgrey;">
+        <code>
+            /* This is a comment in CSS */
+            body {
+                font-family: system-ui;
+                font-size: 62.5%  /* 1em = 10px */
+                line-height: 1.4;
+            }
+        </code>
+    </pre>
+
+    <a href="https://css-tricks.com/snippets/css/comments-in-css/">css-tricks.com to comments in css</a>
+
 </body>
 </html>
